Base première page

--- a/index.html
+++ b/index.html
@@ -230,28 +230,36 @@
 
 <!-- Footer - bloc-8 -->
 <footer>
-	<div class="container">
-		<div class="grix xs3">
-		  <div class="footer-content">
-			<h6>Left side of the footer</h6>
-			<p>
-			  This is my phone number<br />
-			  01 23 45 67 89
-			</p>
+	<div class="container-footer" style="width: 100%;">
+		<div class="d-flex flex-row" style="margin-top: 50px; margin-left: 2%; width: 100%;">
+		  <div class="footer-content p-2" style="width: 25%">
+			<div class="card p-2" style="margin: 4% 4%">
+				<div class="card-body">
+					<div class="card-header font-s5 p-0 m-0" style="color: #707070"><b>Card header</b></div>
+					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+				</div>
+			</div>
 		  </div>
-		  <div class="footer-content txt-center">
-			<h6>Middle of the footer</h6>
-			<p>
-			  Welcome<br />
-			  I'm under "Welcome"
-			</p>
+		  <div class="footer-content p-2" style="width: 25%">
+			<div class="card p-2" style="margin: 4% 4%">
+				<div class="card-body">
+					<div class="card-header font-s5 p-0 m-0" style="color: #707070"><b>Card header</b></div>
+					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+				</div>
+			</div>
 		  </div>
-		  <div class="footer-content txt-right">
-			<h6>Right side of the footer</h6>
-			<p>
-			  This is my address<br />
-			  Route 12
-			</p>
+		  <div class="footer-content p-2" style="width: 50%">
+			<div class="card p-2" style="margin: 4% 4%">
+				<div class="card-body">
+					<div class="card-header font-s5 p-0 m-0" style="color: #707070"><b>Card header</b></div>
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%; margin-left: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%; margin-left: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%; margin-left: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-left: 5%;">
+					<p class="card-text text-justify font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+				</div>
+			</div>
 		  </div>
 		</div>
 	  </div>
