Premiers essais d'animation

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 		
 	<!-- bloc-1-presentation -->
 	<section>
-		<div class="bloc d-bloc b-parallax" id="bloc-1-hero">
+		<div class="section1-container bloc d-bloc b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="200" alt="Icone représentant la chouette, mascotte de l'agence" />
+						<img src="img/logo.png" class="center-block image-resize-mode" width="200" alt="Logo" />
 						<h1 class="text-center hero-bloc-text text-dark">
 							<b>LaboRobo</b>
 						</h1>
@@ -99,26 +99,29 @@
 	<!-- bloc-2-services -->
 	<section>
 		<div class="section2-container d-flex flex-row">
-			<div class="card p-2" style="width: 55%; margin-left: 10%; margin-top: 20px;">
-				<div class="card">
-					<div class="card-content ml-5">
-					  <div class="card-header font-s7" style="color: #707070"><b>Card header</b></div>
-					  <p class="font-s6 text-justify" style="line-height: 150%; color:#B1B1B1"><b>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus impedit distinctio quidem, nesciunt id
-						possimus quia, tempore fuga doloribus reiciendis facilis voluptate accusantium! Adipisci est nam soluta! Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						Phasellus dictum, nisl in finibus aliquet, dolor nulla euismod felis, sed finibus nunc nunc sit amet nisl. Duis id odio a nisl maximus ultricies.
-						Donec eget enim lacus. Sed non dapibus diam. Aenean ipsum erat, molestie eu consequat id, pharetra nec ex. Ut eu nisl sit amet metus vestibulum molestie.
-						Aliquam viverra eleifend justo quis eleifend.</b>
-					  </p>
+			<div class="section2-bg1"><div class="section2-bg2"></div></div>
+			<div class="section2-content d-flex flex-row">
+				<div class="card p-2" style="width: 55%; margin-left: 10%; margin-top: 80px;">
+					<div class="card">
+						<div class="card-content ml-5">
+						<div class="card-header font-s7" style="color: #707070"><b>Card header</b></div>
+						<p class="font-s6 text-justify" style="line-height: 150%; color:#B1B1B1"><b>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus impedit distinctio quidem, nesciunt id
+							possimus quia, tempore fuga doloribus reiciendis facilis voluptate accusantium! Adipisci est nam soluta! Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Phasellus dictum, nisl in finibus aliquet, dolor nulla euismod felis, sed finibus nunc nunc sit amet nisl. Duis id odio a nisl maximus ultricies.
+							Donec eget enim lacus. Sed non dapibus diam. Aenean ipsum erat, molestie eu consequat id, pharetra nec ex. Ut eu nisl sit amet metus vestibulum molestie.
+							Aliquam viverra eleifend justo quis eleifend.</b>
+						</p>
+						</div>
+					</div>
+					<div class="d-flex flex-row" style="margin-left: 5%">
+						<button type="button" class="btn grey light-3 btn-lg font-s6 rounded-4" style="color: #B1B1B1; padding-left: 2%; padding-right: 40%;">Large button</button>
+						<button type="button" class="btn blue dark-4 btn-lg font-s6 ml-5 rounded-4" style="color: #B1B1B1; padding-left: 2%; padding-right: 20%;">Large button</button>
 					</div>
 				</div>
-				<div class="d-flex flex-row" style="margin-left: 5%">
-					<button type="button" class="btn grey light-3 btn-lg font-s6 rounded-4" style="color: #B1B1B1; padding-left: 2%; padding-right: 40%;">Large button</button>
-					<button type="button" class="btn blue dark-4 btn-lg font-s6 ml-5 rounded-4" style="color: #B1B1B1; padding-left: 2%; padding-right: 20%;">Large button</button>
+				<div class="card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-right: 15%;">
+						<img src="img/texture-paper.png" alt="" height="300" class="rounded-3" >
 				</div>
-			</div>
-			<div class="card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-right: 15%;">
-					  <img src="img/texture-paper.png" alt="" height="300" class="rounded-3" >
 			</div>
 		</div>
 	</section>
@@ -126,42 +129,47 @@
 
 	<!-- bloc-3-what-i-do -->
 	<section>
-		<div class="section3-container d-flex flex-row justify-content-between" style="width: 100%; margin: 5rem">
-			<div class="card p-2" style="width: 20%; margin: 0 2%">
-				<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+		<div class="section3-container d-flex flex-row justify-content-between" style="width:100%; margin: 5rem">
+			<div class="section3-container-left d-flex flex-row justify-content-between">
+				<div class="card p-2 card-pres" style="width: 40%; margin: 0 2%">
+					<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+					</div>
+				</div>
+				<div class="card p-2 card-pres" style="width: 40%; margin: 0 2%">
+					<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+					</div>
 				</div>
 			</div>
-			<div class="card p-2" style="width: 20%; margin: 0 2%">
-				<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+			<div class="section3-container-right d-flex flex-row justify-content-between">
+				<div class="card p-2 card-pres" style="width: 40%; margin: 0 2%">
+					<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!.</p>
+					</div>
+				</div>
+				<div class="card p-2 card-pres" style="width: 40%; margin: 0 2%">
+					<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+					</div>
 				</div>
 			</div>
-			<div class="card p-2" style="width: 20%; margin: 0 2%">
-				<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!.</p>
-				</div>
-			</div>
-			<div class="card p-2" style="width: 20%; margin: 0 2%">
-				<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
-				<div class="card-body">
-					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
-				</div>
-			</div>
+			
 		</div>
 	</section>
 	<!-- bloc-3-what-i-do END -->
 
 	<!-- bloc-4-portfolio -->
 	<section>
-		<div class="section4-container d-flex flex-row" style="margin-top: 100px;">
-			<div class="card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-left: 15%;">
+		<div class="section4-container d-flex flex-row">
+			<div class="section4-img card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-left: 15%;">
 				<img src="img/texture-paper.png" alt="" height="300" class="rounded-3" >
 	  		</div>
-			<div class="card p-2" style="width: 55%; margin-right: 10%; margin-top: 20px;">
+			<div class="section4-text card p-2" style="width: 55%; margin-right: 10%; margin-top: 20px;">
 				<div class="card">
 					<div class="card-content ml-5">
 					  <div class="card-header font-s7" style="color: #707070"><b>Card header</b></div>
@@ -177,7 +185,7 @@
 			</div>
 		</div>
 		<div class="section4-container d-flex flex-row" style="margin-top: 50px;">
-			<div class="card p-2" style="width: 55%; margin-left: 10%; margin-top: 20px;">
+			<div class="section4-text card p-2" style="width: 55%; margin-left: 10%; margin-top: 20px;">
 				<div class="card">
 					<div class="card-content mr-5">
 					  <div class="card-header font-s7" style="color: #707070"><b>Card header</b></div>
@@ -191,7 +199,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-right: 15%;">
+			<div class="section4-img card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-right: 15%;">
 				<img src="img/texture-paper.png" alt="" height="300" class="rounded-3" >
 	  		</div>
 		</div>
