Suppression des animations

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 		
 	<!-- bloc-1-presentation -->
 	<section>
-		<div class="section1-container bloc d-bloc b-parallax" id="bloc-1-hero">
-			<div class="container bloc-lg">
+		<div class=" bloc d-bloc b-parallax" id="bloc-1-hero">
+			<div class=" bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="200" alt="Logo" />
@@ -129,8 +129,8 @@
 
 	<!-- bloc-3-what-i-do -->
 	<section>
-		<div class="section3-container d-flex flex-row justify-content-between" style="width:100%; margin: 5rem">
-			<div class="section3-container-left d-flex flex-row justify-content-between">
+		<div class=" d-flex flex-row justify-content-between" style="width:100%; margin: 5rem">
+			<div class=" d-flex flex-row justify-content-between">
 				<div class="card p-2 card-pres" style="width: 40%; margin: 0 2%">
 					<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
 					<div class="card-body">
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="section3-container-right d-flex flex-row justify-content-between">
+			<div class=" d-flex flex-row justify-content-between">
 				<div class="card p-2 card-pres" style="width: 40%; margin: 0 2%">
 					<img class="card-img-top rounded-full" src="img/texture-paper.png" height="200" alt="Card image cap">
 					<div class="card-body">
@@ -165,11 +165,11 @@
 
 	<!-- bloc-4-portfolio -->
 	<section>
-		<div class="section4-container d-flex flex-row">
-			<div class="section4-img card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-left: 15%;">
+		<div class=" d-flex flex-row">
+			<div class="card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-left: 15%;">
 				<img src="img/texture-paper.png" alt="" height="300" class="rounded-3" >
 	  		</div>
-			<div class="section4-text card p-2" style="width: 55%; margin-right: 10%; margin-top: 20px;">
+			<div class="card p-2" style="width: 55%; margin-right: 10%; margin-top: 20px;">
 				<div class="card">
 					<div class="card-content ml-5">
 					  <div class="card-header font-s7" style="color: #707070"><b>Card header</b></div>
@@ -184,8 +184,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="section4-container d-flex flex-row" style="margin-top: 50px;">
-			<div class="section4-text card p-2" style="width: 55%; margin-left: 10%; margin-top: 20px;">
+		<div class=" d-flex flex-row" style="margin-top: 50px;">
+			<div class="card p-2" style="width: 55%; margin-left: 10%; margin-top: 20px;">
 				<div class="card">
 					<div class="card-content mr-5">
 					  <div class="card-header font-s7" style="color: #707070"><b>Card header</b></div>
@@ -199,7 +199,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="section4-img card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-right: 15%;">
+			<div class=" card p-2 mr-5" style="width: 25%; margin-top: auto; margin-bottom: auto; margin-right: 15%;">
 				<img src="img/texture-paper.png" alt="" height="300" class="rounded-3" >
 	  		</div>
 		</div>
