--- a/css/contact.html
+++ b/css/contact.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/0de106410b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container5">
@@ -22,21 +23,22 @@
 
           <div class="info">
             <div class="information">
-              <img src="https://raw.githubusercontent.com/sefyudem/Contact-Form-HTML-CSS/master/img/location.png" class="icon" alt="" />
+                <i class="fa fa-map-marker fa-2x"class="icon"></i>
+        
               <p>92 rue de la symphonie, NY 11553</p>
             </div>
             <div class="information">
-              <img src="https://raw.githubusercontent.com/sefyudem/Contact-Form-HTML-CSS/master/img/email.png" class="icon" alt="" />
+                <i class="fa fa-envelope fa-2x" class="icon"></i>
               <p>lorem@ipsum.com</p>
             </div>
             <div class="information">
-              <img src="https://raw.githubusercontent.com/sefyudem/Contact-Form-HTML-CSS/master/img/phone.png" class="icon" alt="" />
+                <i class="fa fa-phone fa-2x" class="icon" ></i>
               <p>05.68.96.23.54</p>
             </div>
           </div>
 
           <div class="social-media">
-            <p>Connect with us :</p>
+            <p>suivez nous :</p>
             <div class="social-icons">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
