--- a/robot.html
+++ b/robot.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta charset="utf-8">
+    <meta name="keywords" content="robot, ynov, toulouse, ydays, atelier, robotique">
+    <meta name="description" content="Fabrication d'un robot.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@1.3.4/dist/css/axentix.min.css" />
+	<link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+      crossorigin="anonymous"
+    />
+
+	<script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
+	<script src="./js/blocs.js" defer></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js" defer></script>
+  
     <title>Document</title>
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap"
@@ -12,6 +35,39 @@
   </head>
 
   <body>
+
+    <!-- bloc-0 -->
+<header>
+	<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="container bloc-sm">
+			<nav class="navbar2 row">
+				<div class="navbar-header">
+					<a class="navbar-brand" title="Lien vers la page d'accueil" href="index.html"><img src="img/logo.png" alt="Logo et nom de l'agence La chouette agence" height="40" /> Accueil</a>
+					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1" aria-label="navigation">
+						<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<ul class="site-navigation nav navbar-nav">
+						<li>
+							<a href="index.html" title="Lien vers la page d'accueil">Connaître l'équipe</a>
+						</li>
+						<li>
+							<a href="robot.html" title="Lien vers la page de contact">Le robot</a>
+						</li>
+						<li>
+							<a href="contact.html" title="Lien vers la page d'accueil">Contact</a>
+						</li>
+						<li>
+							<a href="index.html" title="Lien vers la page d'accueil"><span class="primary-color-1">Connexion</span></a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+	</div>
+</header>
+<!-- bloc-0 END -->
 
     <main>
       <section class="home-intro">
@@ -83,6 +139,46 @@
         </div>
       </div>
     </main>
+
+<!-- Footer - bloc-8 -->
+<footer>
+	<div class="container-footer" style="width: 100%;">
+		<div class="d-flex flex-row" style="margin-top: 50px; margin-left: 2%; width: 100%;">
+		  <div class="footer-content p-2" style="width: 25%">
+			<div class="card p-2" style="margin: 4% 4%">
+				<div class="card-body">
+					<div class="card-header font-s5 p-0 m-0" style="color: #707070"><b>Card header</b></div>
+					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+				</div>
+			</div>
+		  </div>
+		  <div class="footer-content p-2" style="width: 25%">
+			<div class="card p-2" style="margin: 4% 4%">
+				<div class="card-body">
+					<div class="card-header font-s5 p-0 m-0" style="color: #707070"><b>Card header</b></div>
+					<p class="card-text text-center font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+				</div>
+			</div>
+		  </div>
+		  <div class="footer-content p-2" style="width: 50%">
+			<div class="card p-2" style="margin: 4% 4%">
+				<div class="card-body">
+					<div class="card-header font-s5 p-0 m-0" style="color: #707070"><b>Card header</b></div>
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%; margin-left: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%; margin-left: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-right: 5%; margin-left: 5%;">
+					<img class="card-img-top rounded-full my-5" src="img/texture-paper.png" height="50" alt="Card image cap" style="margin-left: 5%;">
+					<p class="card-text text-justify font-s4" style="line-height: 150%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veritatis excepturi natus!</p>
+				</div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	  <div class="footer fx-center">Copyright © 2022 - Example</div>
+</footer>
+<!-- Footer - bloc-8 END -->
+
     <script src="js/observers.js"></script>
   </body>
 </html>
