--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<a href="index.html" title="Lien vers la page d'accueil">Connaître l'équipe</a>
 						</li>
 						<li>
-							<a href="page2.html" title="Lien vers la page de contact">Le robot</a>
+							<a href="robot.html" title="Lien vers la page de contact">Le robot</a>
 						</li>
 						<li>
-							<a href="index.html" title="Lien vers la page d'accueil">Contact</a>
+							<a href="contact.html" title="Lien vers la page d'accueil">Contact</a>
 						</li>
 						<li>
 							<a href="index.html" title="Lien vers la page d'accueil"><span class="primary-color-1">Connexion</span></a>
