--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
 
       <!-- Footer - bloc-8 -->
 <footer>
-	<div class="container-footer test" style="width: 100%; height: 200px">
+	<div class="container-footer" style="width: 100%; height: 200px">
 		<div class="d-flex flex-row" style="margin-left: 5%; width: 100%;">
 		  <div class="footer-content p-2" style="width: 25%">
 			<div class="card p-2" style="margin: 4% 4%">
